fix(header): set spacing to x3 without image

--- a/source/css/_objects.sections.scss
+++ b/source/css/_objects.sections.scss
@@ -101,7 +101,7 @@
 }
 
 .c-page-header__long {
-  padding-top: $space * 4;
+  padding-top: $space * 3;
 
   &--inner {
     position: relative;
